--- a/styles/mobileres.css
+++ b/styles/mobileres.css
@@ -7,9 +7,10 @@
 
 }
 
-@media only screen and (max-width: 430px) {
+@media only screen and (max-width: 600px) {
     body {
         background-color: white;
+        /* background-color: green; */
     }
 
     .navbar {
@@ -34,6 +35,7 @@
         text-align: center;
         height: 30px;
         padding-top: 10px;
+        font-size: .8rem;
 
     }
 
