--- a/styles/mobileres.css
+++ b/styles/mobileres.css
@@ -12,6 +12,10 @@
         background-color: white;
         /* background-color: green; */
     }
+    .mainContainer{
+        width: 90%;
+        margin: 0 auto;
+    }
 
     .navbar {
         height: 60px;
@@ -106,6 +110,7 @@
         padding-left: 15%;
         padding-top: 50px;
         text-align: center;
+       
 
     }
 
@@ -131,44 +136,22 @@
         height: 200px;
     }
 
-
-
-    .bgimg_2 {
+    .PORTFOLIO{
+        background-color: chocolate;
+    }
+    .bgimg_center{
+      
+      
+    }
+    .bg_img2{
         background-image: url("../src/imag2\(1\).jpg");
-        background-attachment: scroll;
         background-size: cover;
-        background-repeat: no-repeat;
         background-position: center center;
-        width: 100%;
-        height: 400px;
-        /* min-height: 100vh; */
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        height: 300px;
         position: relative;
-        opacity: 50%;
-    }
-
-    .portfolio {
-        position: absolute;
-        /* top: 40%; */
-        left: 35%;
-        bottom: 40%;
-        font-size: 1.6rem;
-        margin-top: 100px;
-        font-family: sans-serif;
-        color: rgb(205, 255, 130);
-
-    }
-
-    .mywork {
-        width: 100%;
-        height: 200px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
-
-    .myworktext>h3 {
-        padding-bottom: 10px;
-    }
+      }
 
     .table_container {
         width: 100%;
@@ -177,18 +160,17 @@
 
     .tableimg {
 
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
-        /* grid-template-rows: 200px; */
+        display: flex;
+        flex-direction: column;
         gap: 10px;
         width: 100%;
         margin: 100px 0px;
-        padding: 0 10px;
+        padding: 0 10px; */
     }
 
     .imgcolumns>img {
         width: 100%;
-        height: 200px;
+        height: 300px;
         border: 1px solid;
 
     }
@@ -298,15 +280,15 @@
     .footer_sec {
         width: 100%;
         height: 300px;
-        background-color: gray;
+        background-color: lightgrey;
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
         gap: 10px;
-        color: white;
-        margin: 220px 0;
-        margin-left: 10px;
+        color: black;
+        margin-top: 200px;
+        padding-bottom: 80px;
     }
 
 
