--- a/styles/style.css
+++ b/styles/style.css
@@ -202,6 +202,7 @@ body{
   justify-content: space-evenly;
   line-height: 2rem;
   margin-top: 50px;
+ 
 }
 
 .bottom_1,
@@ -210,6 +211,7 @@ body{
 .bottom_4 {
   color: white;
   text-align: center;
+  font-size: 1rem;
 }
 
 /* skills columns */
@@ -217,64 +219,51 @@ body{
 .project,
 .happyclint,
 .meeting {
-  font-size: 1.6rem;
+  font-size: 1.3rem;
 }
 
 /* insert bg image 2 */
-.bgimg_2 {
-  background-image: url("../src/imag2\(1\).jpg");
-  background-attachment: fixed;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center center;
-  width: 100%;
-  height: 400px;
-  /* min-height: 100vh; */
-  position: relative;
-  opacity: 50%;
-}
+
 
 
 
 /* portfolio section */
 .portfolio {
-  position: absolute;
-  /* top: 40%; */
-  left: 35%;
-  bottom: 40%;
-  font-size: 2rem;
-  margin-top: 300px;
-  font-family: sans-serif;
-  color: rgb(205, 255, 130);
+
 }
 
-.mywork {
-  width: 100%;
-  height: 200px;
+.bg_img2{
+  background-image: url("../src/imag2\(1\).jpg");
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  height: 500px;
+  position: relative;
+}
 
+.portfolio{
+  font-size: 1.5rem;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  color: aquamarine;
+}
+.myworkHome{
+  
+  height: 300px;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-.myworktext {
-  text-align: center;
-  color: rgb(90, 90, 90);
-  font-family: sans-serif;
+.mywork{
+ /* background-color: blue; */
+ text-align: center;
+ line-height: 2rem;
 }
 
-.myworktext>h3 {
-  padding-bottom: 20px;
-}
 
-.myworktext>p {
-  line-height: 1.5rem;
-}
-
-.table_container {
-  width: 60%;
-  margin: 0 auto;
-}
 
 
 /* display grid property */
@@ -292,7 +281,7 @@ body{
 
 .imgcolumns>img {
   width: 100%;
-  height: 200px;
+  height: 300px;
   border: 1px solid;
 
 }
@@ -331,7 +320,7 @@ body{
   background-size: cover;
   background-attachment: fixed;
   width: 100%;
-  height: 300px;
+  height: 400px;
   position: relative;
   opacity: 60%;
 }
@@ -426,7 +415,7 @@ input::placeholder {
 }
 
 .message_buttons {
-  width: 130px;
+  width: 120px;
   height: 40px;
   background-color: green;
   color: white;
@@ -463,16 +452,18 @@ input::placeholder {
 
 /* footer sec */
 
-.footer_sec {
+
+.footer_sec{
   width: 100%;
-  height: 300px;
-  background-color: gray;
+  height: 400px;
+  background-color: lightgrey;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   gap: 10px;
-  color: white;
+  color: black;
+
 }
 
 .footer_sec:hover {
@@ -505,7 +496,7 @@ input::placeholder {
   cursor: pointer;
 }
 
-.social_icon>p>i {
+.social_icon>p>i{
   font-size: 1.6rem;
   cursor: pointer;
 }
