--- a/mediumDevice.css
+++ b/mediumDevice.css
@@ -7,10 +7,10 @@
 
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 992px) {
     body {
-        background-color: white;
-        /* background-color: green; */
+        /* background-color: white; */
+        background-color: green;
     }
     .main_container{
         width: 95%;
